--- a/backend/package.json
+++ b/backend/package.json
@@ -6,15 +6,18 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:ui": "shx rm -rf dist && cd ../frontend/ && npm run build && shx cp -r dist ../backend",
+    "deploy": "fly deploy"
   },
   "author": "reservecrate",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "morgan": "^1.10.0",
-    "morgan-body": "^2.6.8"
+    "mongoose": "^7.0.3",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
