--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:ui": "shx rm -rf dist && cd ../frontend/ && npm run build && shx cp -r dist ../backend",
     "deploy": "fly deploy",
+    "lint": "eslint .",
     "build:dev": "shx rm -rf dist && cd ../frontend/ && npm run build && shx cp -r dist ../backend && nodemon index.js"
   },
   "author": "reservecrate",
@@ -21,6 +22,9 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "eslint": "^8.38.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5",
     "nodemon": "^2.0.20"
   }
 }
